[package]
name = "testutils"
version = "0.0.6"
rust-version = "1.85"
edition = "2024"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
keywords = ["test", "utils"]
categories = ["development-tools"]
readme = "docs/Readme.md"
repository = "https://github.com/2moe/testutils"
description = """
Offers a range of utility functions, macros, and tools, such as `simple_benchmark()` and `dbg_ref!()`, `os_cmd::Runner`, designed for testing purposes.
"""
exclude = ["/rust-toolchain.toml", "/misc/"]

[features]
default = ["std", "os_cmd", "traits", "re_exports_tap"]
# ------------
traits = []
re_exports_tap = []
std = ["compact_str?/std", "tinyvec?/std", "shlex?/std"]
os_cmd = [ #
    "std",
    "dep:shlex",
    "dep:tinyvec",
    "dep:compact_str",
]

[dependencies]
compact_str = { version = "0.9", default-features = false, optional = true }
getset = "0.1"
log = "0.4"
shlex = { version = "1.3", default-features = false, optional = true }
tap = "1.0"
tinyvec = { version = "1.10", optional = true, features = [
    "alloc",
    "rustc_1_61",
] }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
env_logger = "0.11"
